fix: update workflow to use ANTHROPIC_API_KEY

--- a/.github/workflows/daily-words.yml
+++ b/.github/workflows/daily-words.yml
@@ -26,4 +26,5 @@ jobs:
         EMAIL_USER: ${{ secrets.EMAIL_USER }}
         EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
         EMAIL_TO: ${{ secrets.EMAIL_TO }}
+        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
       run: npm start 
